syntax = "proto3";

// 引用通用的心跳檔案
import "common/request.proto";
import "common/response.proto";

// 定義一個遊戲服務的套件
package game;

option java_multiple_files = true;
option java_package = "com.example.proto.game";
option java_outer_classname = "GameServiceProto";
// 定義心跳服務
service GameService {
  rpc GameStream (stream common.RequestMessage) returns (stream  common.ResponseMessage);
}